# dlog

./: .appveyor.yml  .gitmodules  CMakeLists.txt  README.md  config.cmake.in
.github/workflows/: ci.yml
include/dumb_log/: CMakeLists.txt  channel_flags.hpp  config.hpp  dumb_log.hpp  file_logger.hpp  level.hpp  log.hpp  pipe.hpp
src/: CMakeLists.txt  dumb_log.cpp  file_logger.cpp  log.cpp
